--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,18 @@
 version: '3.7'
 services:
   bankdb:
-    image: postgres:alpine
+    image: library/postgres:alpine
     ports:
       - 5532:5432
     volumes:
       - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d:ro
     env_file:
       - .env
+
+  cache:
+    image: library/redis:alpine
+    ports:
+      - 6379:6379
+    volumes:
+      - ./conf/redis.conf:/usr/local/etc/redis/redis.conf:ro
+    command: redis-server /usr/local/etc/redis/redis.conf
